--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,36 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+
+:root {
+    --font-family: 'Montserrat', sans-serif;
+    --font-family-secondary: 'Open Sans', sans-serif;
+    --primary-color: #101214;
+    --primary-gold: #b7a364;
+    --secondary-color: #;
+    --tertiary-color: #d9d9d9;
+}
+
+* {
+    font-family: var(--font-family);
+    font-optical-sizing: auto;
+    font-weight: 500;
+}
+
+body {
+  background-color: var(--primary-color);
+}
+
+.btn-gbs-primary {
+    background-color: var(--primary-gold);
+    color: #000;
+    padding: 0.8rem 3rem;
+    font-weight: 500;
+    font-size: 1.1rem;
+
+    &:hover {
+        /* background-color: darken(var(--primary-color2), 10%); */
+    }
+}
