--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="navbar navbar-expand-lg fixed-top arriba">
-    <div class="container-fluid px-5">
+    <div class="container-fluid px-2 px-md-5">
         <div>
             <a class="navbar-brand d-flex justify-content-center align-items-center" href="/">
                 <!-- <app-logo/> -->
