--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -16,6 +16,15 @@
 
 }
 
+@media (max-width: 776px) {
+    .logo {
+        width: 200px;
+        height: auto;
+        max-width: 60vw;
+        padding: 4px 0;
+    }
+}
+
 /* header {
     transition: all 0.5s ease;
 }
