--- a/src/app/sections/presentation/presentation.component.html
+++ b/src/app/sections/presentation/presentation.component.html
@@ -1,7 +1,7 @@
 <section class="vh-100 d-flex justify-content-center align-items-center" id="main">
-    <article class="container">
+    <article class="container px-5 px-lg-3 px-xl-2">
         <div class="row justify-content-start align-items-center">
-            <div class="col-md-8">
+            <div class="col-12 col-xl-8">
                 <h1 class="text-white mb-4">Global Business <span class="gold">Strategists</span></h1>
                 <p class="text-white fs-5 mb-4">
                     Impulsamos tu empresa con soluciones integrales en cada etapa de su crecimiento, desde la
