--- a/src/app/sections/presentation/presentation.component.scss
+++ b/src/app/sections/presentation/presentation.component.scss
@@ -1,5 +1,13 @@
 h1 {
     font-size: 5rem;
+
+    @media (max-width: 600px) {
+        font-size: 3rem;
+    }
+
+    @media (max-width: 400px) {
+        font-size: 2rem;
+    }
 }
 
 .gold {
