:sparkles: About, footer, carousel and come content

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,48 @@
-<p>footer works!</p>
+<footer class="text-center text-lg-start text-light">
+    <section class="footer-content">
+        <div class="container text-center text-md-start pt-3 px-5">
+            <div class="row mt-2">
+                <div
+                    class="d-flex justify-content-start align-items-center flex-column col-md-3 col-lg-4 col-xl-4 mx-auto mb-4"
+                >
+                    <div>
+                        <img src="logo.svg" alt="Logo Universo" width="250" />
+                        <p class="mt-4 fst-italic">
+                            Transformamos ideas en proyectos <br />
+                            innovadores
+                        </p>
+                    </div>
+                </div>
+
+                <div
+                    class="d-flex justify-content-start align-items-center flex-column col-md-2 col-lg-2 col-xl-4 mx-auto mb-3 mt-4"
+                >
+                    <h6 class="text-uppercase fw-bold mb-3">Servicios</h6>
+                    <p class="mb-1 text-small">Consultoría empresarial</p>
+                    <p class="mb-1 text-small">Evaluación de proyectos</p>
+                    <p class="mb-1 text-small">Asesoría financiera</p>
+                </div>
+
+                <div
+                    class="d-flex justify-content-start align-items-center flex-column col-md-4 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-3 mt-4"
+                >
+                    <h6 class="text-uppercase fw-bold mb-3">Contacto</h6>
+
+                    <p class="mb-1"><i class="fa-solid fa-user me-3"></i>Marcela Rivera</p>
+                    <p class="mb-1">
+                        <i class="fas fa-envelope me-3"></i>
+                        <a class="text-reset" href="mailto:gbstrategists@universo.com.co"
+                            >gbstrategists&#64;gmail.com</a
+                        >
+                    </p>
+                    <p class="mb-1"><i class="fa-solid fa-location-dot me-3"></i>Bogotá D. C., Colombia</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="copyright-content small text-center p-2 bg-dark">
+        © 2025 Copyright:
+        <span class="text-reset fw-bold">Global Business Strategists</span>. Todos los derechos reservados.
+    </section>
+</footer>
