--- a/src/app/sections/presentation/presentation.component.html
+++ b/src/app/sections/presentation/presentation.component.html
@@ -1,18 +1,19 @@
-<section class="vh-100 d-flex justify-content-center align-items-center" id="main">
+<section class="d-flex justify-content-center align-items-center presentation" id="main">
     <article class="container px-5 px-lg-3 px-xl-2">
         <div class="row justify-content-start align-items-center">
-            <div class="col-12 col-xl-8">
+            <div class="col-12 col-md-6">
                 <h1 class="text-white mb-4">Global Business <span class="gold">Strategists</span></h1>
                 <p class="text-white fs-5 mb-4">
                     Impulsamos tu empresa con soluciones integrales en cada etapa de su crecimiento, desde la
                     planificación estratégica hasta la ejecución operativa. Nuestro equipo de expertos te acompaña para
                     alcanzar tus objetivos y potenciar tu competitividad en el mercado.
                 </p>
-                <button class="btn btn-gbs-primary">Ver más <span class="arrow"></span></button>
+                <button class="btn btn-gbs-primary d-none d-md-block">Ver más <span class="arrow"></span></button>
             </div>
-            <!-- <div class="col-md-6">
+            <div class="col-12 col-md-6 d-flex justify-content-center align-items-center flex-column">
                 <app-carousel />
-            </div> -->
+                <button class="btn btn-gbs-primary d-block d-md-none mt-3">Ver más <span class="arrow"></span></button>
+            </div>
         </div>
     </article>
 </section>
