--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,3 +35,7 @@ body {
         /* background-color: darken(var(--primary-color2), 10%); */
     }
 }
+
+.scroll-section {
+    scroll-margin-top: 120px;
+}
