--- a/src/app/sections/presentation/presentation.component.scss
+++ b/src/app/sections/presentation/presentation.component.scss
@@ -1,11 +1,15 @@
 h1 {
-    font-size: 5rem;
+    font-size: 4.5rem;
 
-    @media (max-width: 600px) {
+    @media (max-width: 1200px) {
+        font-size: 3.5rem;
+    }
+
+    @media (max-width: 992px) {
         font-size: 3rem;
     }
 
-    @media (max-width: 400px) {
+    @media (max-width: 576px) {
         font-size: 2rem;
     }
 }
@@ -13,4 +17,9 @@ h1 {
 .gold {
     color: #bfa76b; /* Gold color */
     font-weight: semibold;
+}
+
+.presentation {
+    height: calc(100vh - 100px);
+    margin-top: 100px;
 }
